@@ -63,11 +63,10 @@ public final class SignedContainerSubject extends Subject {
 
     private void hasDataFiles(ImmutableList<DataFile> dataFiles) {
         DataFile dataFile = DataFile.create("text.txt", "text.txt", 3, "application/octet-stream");
-        List<DataFile> filesList = new ArrayList<>(List.of(dataFile));
-        List<DataFile> dataFilesList = Collections.unmodifiableList(filesList);
+        List<DataFile> filesList = List.of(dataFile);
 
         Truth.assertThat(dataFiles)
-                .containsExactlyElementsIn(dataFilesList)
+                .containsExactlyElementsIn(filesList)
                 .inOrder();
     }
 
@@ -82,7 +81,7 @@ public final class SignedContainerSubject extends Subject {
     }
 
     private void hasSignatures(ImmutableList<Signature> signatures) {
-        List<String> signature0Roles = new ArrayList<>(List.of("Roll"));
+        List<String> signature0Roles = List.of("Roll");
         Signature signature0 = Signature.create("S0",
                 "MARY ÄNN O'CONNEŽ-ŠUSLIK TESTNUMBER",
                 Instant.parse("2022-03-21T12:03:22Z"),
@@ -108,7 +107,7 @@ public final class SignedContainerSubject extends Subject {
                 "EE",
                 "12345");
 
-        List<String> signature1Roles = new ArrayList<>(List.of(""));
+        List<String> signature1Roles = List.of("");
         Signature signature1 = Signature.create("S1",
                 "MARY ÄNN O'CONNEŽ-ŠUSLIK TESTNUMBER",
                 Instant.parse("2022-03-21T21:22:00Z"),
@@ -134,7 +133,7 @@ public final class SignedContainerSubject extends Subject {
                 "",
                 "");
 
-        List<Signature> signatureList = new ArrayList<>(List.of(signature0, signature1));
+        List<Signature> signatureList = List.of(signature0, signature1);
 
         Truth.assertThat(signatureList)
                         .hasSize(signatures.size());
